# RAG_arxiv

./: .env.template  .gitignore  Makefile  README.md  mypy.ini  params.yaml  pyproject.toml  run.py
.dvc/: dvc.yaml
docs/source/: conf.py  index.rst
notebooks/: EDA.ipynb  preprocessing-arxiv-data.ipynb
reports/html/: average_papers.html  growth_ai.html  popular_authors.html
src/: DataLoader.py  LlamaServiceAPI.py  Rerankers.py  VectorStoreService.py  config.py  preprocessing.py  prompts_template.py  utils.py
